--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home - Brand</title>
     <meta property="og:type" content="website">
     <meta name="description" content="Nhận cung cấp xỉ lẻ bao lì xì">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=06ce1fff531025b639699d93a42f4075">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=ae2967c8bb3a9c9736c24897ff15a97f">
     <link rel="manifest" href="/manifest.json?h=eed4d16da80411bc190c3c04527f71d5">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
@@ -30,11 +30,11 @@
             </div>
         </div>
     </nav>
-    <header class="masthead text-center text-white d-flex" style="background-image:url('/assets/img/header.jpg?h=1e0a2a51dfb134a58fe757975cbbf111');">
+    <header class="masthead text-center text-white d-flex" style="background-image: url(&quot;/assets/img/2a8aa3a7a62cd11838ec80f75f6a854e.jpg?h=e228be8ea161c7041233075d5ac0512d&quot;);">
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase"><strong><br>KHO LÌ XÌ tết canh tý 2020&nbsp;<br><br></strong></h1>
+                    <h1 class="text-uppercase"><strong style="color: #d61d28;background-color: rgba(255,255,255,0.61);"><br>KHO LÌ XÌ tết canh tý 2020&nbsp;<br><br></strong></h1>
                     <hr>
                 </div>
             </div>
